# orchet-voice

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: phase-0-baseline.md  phase-0-honeycomb-dashboard-spec.yaml  phase-0-measurement-plan.md  phase-0-runbook.md  phase-1-india-probe-result.md  repo-scaffold-plan.md  sarvam-evaluation-plan.md  sarvam-evaluation-result.md  voice-turn-contract-proposal.md
tests/: conftest.py  test_agent_query_schema.py  test_auth.py  test_barge_in.py  test_brain_memory_backend.py  test_builtin_tools.py  test_confirmation_resolved_listener.py  test_cors.py  test_cost_estimator.py  test_deepgram_ws_tts.py  test_english_shortcut.py  test_health.py  test_language_router.py  test_llm_router.py  test_llm_router_function_call.py  test_migration_protocol.py  test_per_language_prompt_loading.py  test_pipeline_echo.py  test_pipeline_helpers.py  test_pipeline_llm_streaming.py  test_pipeline_stt_streaming.py  test_pipeline_tts_streaming.py  test_region_router.py  test_sarvam_stt_provider.py  test_sarvam_tts_provider.py  test_smoke_page.py  test_tracing.py  test_transport_latency_settings.py  test_transport_migration.py  test_voice_locale_attribute.py  test_voice_turn_dispatcher_confirm.py  test_voice_turn_dispatcher_denied.py  test_voice_turn_dispatcher_executed.py  test_voice_turn_dispatcher_interrupted_snapshot.py
voice/: auth.py  internal_auth.py  persistence.py  pipeline.py  server.py  settings.py  tool_catalog.py  transport.py  voice_turn_dispatcher.py
(+34 files in other folders)
